syntax = "proto3";

package forum;

message Empty {}

message Question {
    string id = 1;
    string text = 2;
    repeated string answers = 3;
}

message QuestionList {
    repeated Question questions = 1;
}

message AnswerRequest {
    string questionId = 1;
    string answerText = 2;
}

service Forum {
    rpc ListQuestions(Empty) returns (QuestionList) {}
    rpc AddQuestion(Question) returns (Empty) {}
    rpc AnswerQuestion(AnswerRequest) returns (Empty) {}
}
